crates/wdl-grammar/tests/parsing/missing-version/source.errors
error: missing version statement
  ┌─ tests/parsing/missing-version/source.wdl:3:1
  │
3 │ task foo {
  │ ^ WDL v1.0+ documents must begin with a version statement
  │
  = help: omitting the version statement declares the document as WDL draft-2, which is not supported
  = fix: upgrade WDL draft-2 documents to v1.0 or later

