crates/wdl-grammar/tests/parsing/missing-version/source.wdl
# This is a test of a missing version statement.

task foo {

}
